fix: lazy load importer & transformer

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1636,7 +1636,9 @@ services:
       - '@monolog.logger.loopeat'
 
   AppBundle\Transporter\Proximus\ProximusImporter:
+    lazy: true
     arguments:
       - "%env(PROXIMUS_SYNC_URI)%"
 
-  AppBundle\Transporter\Proximus\ProximusTransformer: ~
+  AppBundle\Transporter\Proximus\ProximusTransformer:
+    lazy: true
