--- a/.env.dist
+++ b/.env.dist
@@ -116,6 +116,7 @@ CUBEJS_DUCKDB_S3_SECRET_ACCESS_KEY=coopcycle
 CUBEJS_DUCKDB_S3_PATH=/images/exports/%type%
 INSEE_PORTAIL_API_KEY=
 STANDTRACK_API_KEY=
+PROXIMUS_SYNC_URI=
 
 ###> acseo/typesense-bundle ###
 TYPESENSE_URL=http://localhost:8108
