New deliveries import command + proximus support (#5016)
* feat: introduce new command `coopcycle:deliveries:import`

* feat: add proximus importer & transformer

* refact: to improve UX, FQN classname as been replace by aliases

* fix: lazy load importer & transformer

* add `PROXIMUS_SYNC_URI`

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1634,3 +1634,11 @@ services:
     arguments:
       - '@AppBundle\LoopEat\Client'
       - '@monolog.logger.loopeat'
+
+  AppBundle\Transporter\Proximus\ProximusImporter:
+    lazy: true
+    arguments:
+      - "%env(PROXIMUS_SYNC_URI)%"
+
+  AppBundle\Transporter\Proximus\ProximusTransformer:
+    lazy: true
