--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "jest": "jest --config jest.config.js",
     "e2e": "cypress run --browser chrome --headless --no-runner-ui",
+    "cy:open": "cypress open",
     "sdk:watch": "webpack --config webpack.sdk.config.js --watch",
     "sdk:build": "webpack --config webpack.sdk.config.js --mode production",
     "storybook": "storybook dev -p 6006",
@@ -19,10 +20,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cypress/webpack-preprocessor": "^6.0.4",
     "@geoman-io/leaflet-geoman-free": "^2.18.3",
     "@hello-pangea/dnd": "^16.6.0",
-    "cypress": "^14.3.2",
     "dotenv": "^8.6.0",
     "form-data": "^2.3.3",
     "google-libphonenumber": "^3.2.40",
@@ -40,6 +39,7 @@
     "@cubejs-client/core": "^0.34.0",
     "@cubejs-client/playground": "^0.34.0",
     "@cubejs-client/react": "^0.34.0",
+    "@cypress/webpack-preprocessor": "^6.0.4",
     "@datadog/browser-logs": "^5.29.1",
     "@datadog/browser-rum": "^5.29.1",
     "@hotwired/stimulus": "^3.2.2",
@@ -86,6 +86,7 @@
     "core-js": "^3.42.0",
     "cropperjs": "^1.5.12",
     "croppie": "^2.6.5",
+    "cypress": "^14.4.1",
     "database-cleaner": "^1.3.0",
     "date-holidays": "^3.16.10",
     "dayjs": "^1.11.13",
