added: allow to mock createdAt and updatedAt fields in the database

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -39,3 +39,5 @@ services:
           $baseUrl: '%router.request_context.scheme%://%router.request_context.host%'
           $s3Path: '%env(CUBEJS_DUCKDB_S3_PATH)%'
           $appName: '%env(COOPCYCLE_APP_NAME)%'
+
+    AppBundle\Doctrine\EventSubscriber\MockDateSubscriber:
