--- a/.github/workflows/lint_php.yml
+++ b/.github/workflows/lint_php.yml
@@ -2,7 +2,6 @@ name: Lint PHP
 on: push
 env:
   APP_ENV: test
-  NODE_ENV: test
 jobs:
   LINT_PHP:
     name: Lint PHP
@@ -31,6 +30,12 @@ jobs:
       - name: Warmup Symfony cache
         run: bin/console cache:warmup
       - name: Clear Symfony cache (prod)
-        run: bin/console cache:clear --env=prod --no-debug
+        run: bin/console cache:clear
+        env:
+          APP_ENV: prod
+          APP_DEBUG: '0'
       - name: Warmup Symfony cache (prod)
-        run: bin/console cache:warmup --env=prod --no-debug
+        run: bin/console cache:warmup
+        env:
+          APP_ENV: prod
+          APP_DEBUG: '0'
