Install intl extension.

--- a/.github/workflows/lint_php.yml
+++ b/.github/workflows/lint_php.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           php-version: ${{ matrix.php_version }}
           tools: composer:v2, phpstan:1
-          extensions: redis
+          extensions: redis, intl
       - name: Install PHP dependencies
         run: |
           composer install --prefer-dist --no-progress --no-scripts
