Allow not connecting Mercado Pago account.

--- a/.env.dist
+++ b/.env.dist
@@ -204,3 +204,5 @@ MESSENGER_TRANSPORT_DSN=redis://redis:6379/coopcycle:messages/coopcycle/coopcycl
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=flock
 ###< symfony/lock ###
+
+MERCADOPAGO_CONNECT_REQUIRED=0
