use role_dispatcher in tests

--- a/cypress/fixtures/stores_excl_setup.yml
+++ b/cypress/fixtures/stores_excl_setup.yml
@@ -1,6 +1,7 @@
 # 'excl_setup' means that the file does not include the 'setup_default.yml' file; see the 'setup_default.yml' file for more information.
 include:
   - user_admin.yml
+  - user_dispatcher.yml
   - user_courier.yml
   - addresses.yml
   - packages.yml
