--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "react-cropper": "^2.1.8",
     "react-dom": "^18.3.1",
     "react-dropzone": "^11.5.3",
+    "react-error-boundary": "^6.0.0",
     "react-i18next": "^11.18.6",
     "react-markdown": "^8.0.3",
     "react-modal": "^3.16.3",
