--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -41,3 +41,14 @@ services:
           $appName: '%env(COOPCYCLE_APP_NAME)%'
 
     AppBundle\Doctrine\EventSubscriber\MockDateSubscriber:
+
+    app.map_center:
+        class: League\Geotools\Coordinate\Coordinate
+        arguments:
+            - '48.856613,2.352222'
+
+    AppBundle\Faker\AddressProvider:
+        public: true
+        arguments:
+            $center: '@app.map_center'
+        tags: [ { name: nelmio_alice.faker.provider } ]
