--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -17,6 +17,12 @@ monolog:
             level: debug
             max_files: 3
             channels: [ snc_redis ]
+        database:
+            type: rotating_file
+            path: "%env(APP_LOG_DIR)%/doctrine.%kernel.environment%.log"
+            level: debug
+            max_files: 3
+            channels: [ doctrine ]
         api:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/api.%kernel.environment%.log"
