--- a/config/services/serializer.yml
+++ b/config/services/serializer.yml
@@ -151,3 +151,8 @@ services:
       $normalizer: "@serializer.normalizer.object"
       $secret: '%secret%'
     tags: [ { name: serializer.normalizer, priority: 128 } ]
+
+  AppBundle\Serializer\PricingRuleNormalizer:
+    arguments:
+      - "@api_platform.jsonld.normalizer.item"
+    tags: [ { name: serializer.normalizer, priority: 128 } ]
