use factories to create Sylius items

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -515,15 +515,12 @@ services:
         label: 'Is items total above'
         form_type: AppBundle\Form\Sylius\Promotion\Rule\IsItemsTotalAboveConfigurationType
 
-  coopcycle.sylius.factory.product_variant:
-    class: AppBundle\Sylius\Product\ProductVariantFactory
+  AppBundle\Sylius\Product\ProductOptionValueFactory:
+    decorates: sylius.factory.product_option_value
+    public: false
+
+  AppBundle\Sylius\Product\ProductVariantFactory:
     decorates: sylius.factory.product_variant
-    arguments:
-      - "@coopcycle.sylius.factory.product_variant.inner"
-      - "@sylius.repository.product"
-      - "@sylius.repository.tax_category"
-      - "@coopcycle.settings_manager"
-      - "@translator"
     public: false
 
   AppBundle\Sylius\Order\OrderFactory:
