Use standard_put = false.

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,7 +5,7 @@ api_platform:
         normalization_context:
             skip_null_values: false
         extra_properties:
-            standard_put: true
+            standard_put: false
     version: 1.0.0
     title: CoopCycle
     show_webby: false
