--- a/features/fixtures/ORM/pricing_rule_set_with_names.yml
+++ b/features/fixtures/ORM/pricing_rule_set_with_names.yml
@@ -9,14 +9,6 @@ AppBundle\Entity\Address:
     streetAddress: '17, rue Milton 75009 Paris 9ème'
     geo: "@geo_1"
 
-AppBundle\Entity\Sylius\ProductOption:
-  product_option_1:
-    currentLocale: fr
-    code: 'CPCCL-ODDLVR-PR'
-    name: 'Pricing Rules'
-    strategy: 'free'
-    additional: false
-
 AppBundle\Entity\Sylius\ProductOptionValue:
   product_option_value_1:
     currentLocale: fr
@@ -24,7 +16,7 @@ AppBundle\Entity\Sylius\ProductOptionValue:
     value: 'Existing Option'
     price: 0
     enabled: true
-    option: '@product_option_1'
+    option: '@product_option_pricing_rules'
 
 AppBundle\Entity\Delivery\PricingRuleSet:
   pricing_rule_set_1:
