--- a/cypress/fixtures/dispatch.yml
+++ b/cypress/fixtures/dispatch.yml
@@ -20,6 +20,7 @@ AppBundle\Entity\Task:
     address: "@address_1"
     doneAfter: <identity(new \DateTime('today 10:30:00'))>
     doneBefore: <identity(new \DateTime('today 11:00:00'))>
+    type: PICKUP
   task_2:
     address: "@address_2"
     doneAfter: <identity(new \DateTime('today 11:30:00'))>
@@ -32,6 +33,7 @@ AppBundle\Entity\Task:
     address: "@address_1"
     doneAfter: <identity(new \DateTime('today 14:30:00'))>
     doneBefore: <identity(new \DateTime('today 15:00:00'))>
+    type: PICKUP
   task_5:
     address: "@address_2"
     doneAfter: <identity(new \DateTime('today 15:30:00'))>
@@ -40,6 +42,7 @@ AppBundle\Entity\Task:
     address: "@address_1"
     doneAfter: <identity(new \DateTime('today 14:30:00'))>
     doneBefore: <identity(new \DateTime('today 15:00:00'))>
+    type: PICKUP
   task_7:
     address: "@address_2"
     doneAfter: <identity(new \DateTime('today 15:30:00'))>
@@ -48,6 +51,7 @@ AppBundle\Entity\Task:
     address: "@address_1"
     doneAfter: <identity(new \DateTime('today 14:30:00'))>
     doneBefore: <identity(new \DateTime('today 15:00:00'))>
+    type: PICKUP
   task_9:
     address: "@address_2"
     doneAfter: <identity(new \DateTime('today 15:30:00'))>
@@ -56,6 +60,7 @@ AppBundle\Entity\Task:
     address: "@address_1"
     doneAfter: <identity(new \DateTime('today 14:30:00'))>
     doneBefore: <identity(new \DateTime('today 15:00:00'))>
+    type: PICKUP
   task_11:
     address: "@address_2"
     doneAfter: <identity(new \DateTime('today 15:30:00'))>
