--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "styled-components": "^5.3.6",
     "swiper": "^11.2.7",
     "to-string-loader": "^1.2.0",
+    "ts-loader": "^9.5.2",
     "url-loader": "^4.1.1",
     "use-deep-compare": "^1.1.0",
     "webpack": "^5.99.9",
