--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
     "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
     "@symfony/webpack-encore": "^4.7.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "animate.css": "^4.1.1",
     "antd": "^5.0.0",
     "autoprefixer": "^10.4.21",
