--- a/fixtures/ORM/sylius_on_demand_delivery_product.yml
+++ b/fixtures/ORM/sylius_on_demand_delivery_product.yml
@@ -1,8 +1,26 @@
 AppBundle\Entity\Sylius\ProductOption:
-  product_option_pricing_rules:
+  product_option_fixed_price_rules:
     currentLocale: fr
-    code: 'CPCCL-ODDLVR-PR'
-    name: 'Pricing Rules'
+    code: 'CPCCL-ODDLVR-FIXED'
+    name: 'Fixed Price'
+    strategy: 'option_value'
+    additional: true
+  product_option_percentage_price_rules:
+    currentLocale: fr
+    code: 'CPCCL-ODDLVR-PERCENTAGE'
+    name: 'Percentage Price'
+    strategy: 'option_value'
+    additional: true
+  product_option_range_price_rules:
+    currentLocale: fr
+    code: 'CPCCL-ODDLVR-RANGE'
+    name: 'Range Price'
+    strategy: 'option_value'
+    additional: true
+  product_option_package_price_rules:
+    currentLocale: fr
+    code: 'CPCCL-ODDLVR-PACKAGE'
+    name: 'Package Price'
     strategy: 'option_value'
     additional: true
 
@@ -13,4 +31,9 @@ AppBundle\Entity\Sylius\Product:
     name: Livraison à la demande
     slug: livraison-a-la-demande
     enabled: true
-    options: [ "@product_option_pricing_rules" ]
+    options: [
+      "@product_option_fixed_price_rules",
+      "@product_option_percentage_price_rules",
+      "@product_option_range_price_rules",
+      "@product_option_package_price_rules"
+    ]
