enable price breakdown ui with a feature flag

--- a/.env.dist
+++ b/.env.dist
@@ -118,6 +118,10 @@ INSEE_PORTAIL_API_KEY=
 STANDTRACK_API_KEY=
 PROXIMUS_SYNC_URI=
 
+###> feature flags ###
+PACKAGE_DELIVERY_UI_PRICE_BREAKDOWN_ENABLED=0
+###< feature flags ###
+
 ###> acseo/typesense-bundle ###
 TYPESENSE_URL=http://localhost:8108
 TYPESENSE_KEY=123
