Update index.php for Symfony 6.4.

--- a/config/packages/prod/framework.yaml
+++ b/config/packages/prod/framework.yaml
@@ -18,3 +18,4 @@ framework:
 #        cache: serializer.mapping.cache.doctrine.apc
     session:
         cookie_secure: true
+    trusted_proxies: '%env(TRUSTED_PROXIES)%'
