update `typescript-eslint` config

--- a/package.json
+++ b/package.json
@@ -68,8 +68,6 @@
     "@symfony/webpack-encore": "^4.7.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
     "animate.css": "^4.1.1",
     "antd": "^5.0.0",
     "autoprefixer": "^10.4.21",
@@ -183,6 +181,7 @@
     "to-string-loader": "^1.2.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0",
     "url-loader": "^4.1.1",
     "use-deep-compare": "^1.1.0",
     "webpack": "^5.99.9",
