add a warning for typescript errors

--- a/.github/workflows/lint_js.yml
+++ b/.github/workflows/lint_js.yml
@@ -16,5 +16,9 @@ jobs:
       - name: Run ESLint
         run: node_modules/.bin/eslint --quiet js/app/ assets/react
       - name: Run TypeScript Compiler
+        id: tsc
         run: node_modules/.bin/tsc --noEmit --pretty
         continue-on-error: true
+      - name: TypeScript Warning
+        if: steps.tsc.outcome == 'failure'
+        run: echo "::warning::TypeScript compilation failed with errors"
