--- a/cypress/fixtures/addresses.yml
+++ b/cypress/fixtures/addresses.yml
@@ -24,8 +24,10 @@ AppBundle\Entity\Address:
     postalCode: '75009'
     streetAddress: '17, rue Milton 75009 Paris 9ème'
     geo: "@geo_3"
+    contactName: 'Bob Marley'
   address_4:
     addressLocality: 'Paris'
     postalCode: '75004'
     streetAddress: '1, Rue de Rivoli, Paris, France'
     geo: "@geo_4"
+    name: 'Palace de Maradona'
