ignore deprecation warnings on production

--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -113,6 +113,7 @@ monolog:
         upload_info:
             type: filter
             channels: [
+              "!deprecation"
               "!php",
               "!cache",
               "!security",
