--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -2,7 +2,7 @@ monolog:
   # channels to use with autowire; https://symfony.com/doc/current/logging/channels_handlers.html#how-to-autowire-logger-channels
   channels:
     [
-      '!deprecation',
+      'deprecation',
       'domain_event',
       'checkout',
       'database',
