--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -113,7 +113,7 @@ monolog:
         upload_info:
             type: filter
             channels: [
-              "!deprecation"
+              "!deprecation",
               "!php",
               "!cache",
               "!security",
